[package]
name = "gproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version="1.46.1", features=["full", "net"]}
serde_json = {version="1.0.140"}
serde = {version="1.0.140", features=["derive"]}
strum = {version="0.27.1", features=["derive"]}
log = {version="0.4.27"}
colog = {version="1.3.0"}
